@@ -1,3 +1,7 @@
+    New feature: Now you can assign an issue to anybody even after
+    it's been created and even if it didn't already have an assignment.
+    Real#0299, Real#0188, Real#0081
+    
     Bug fixed: Sending assignment emails from a user with non-ASCII
     name would cause an UnicodeDecodeError.
 
@@ -10,8 +14,6 @@
 
     Bug fixed: preParseEmailString would sometimes barf on unicode
     strings for translation.
-    
-    New feature: Uses jQuery 1.1.4 (much faster)
     
     Bug fixed: UnicodeDecodeError wasn't raised properly in processing
     inbound email reply and formatflowed_decode() was called with wrong 
